# class-consciousness

./: .env.example  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  Makefile  README.md  REUSE.toml  SECURITY.md  biome.json  docker-compose.prod.yml  package.json  pnpm-lock.yaml  pyproject.toml
.claude/: AGENT_GUIDE.md  settings.json
.claude/rules/: citation-honest-vs-literal.md  main-branch-only.md  no-unsourced-rag.md
.claude/skills/debug-rag/: SKILL.md
.claude/skills/test-fix/: SKILL.md
.claude/skills/test-full/: SKILL.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  corpus.yml  feature.yml
.github/workflows/: ci.yml  codeql.yml  dco.yml  scorecard.yml
.reuse/: dep5
apps/api/: CLAUDE.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 20260514_0001_init_corpus.py  20260514_0002_refactor_issues_articles.py  20260514_0003_users_memberships.py  20260514_0004_auth_tokens_sessions.py  20260515_0005_adhesion_intents_stripe.py  20260516_0006_widen_article_slug.py  20260517_0007_adhesion_intent_public_token.py  20260517_0008_abonnements.py
apps/api/src/cc_api/: main.py
apps/api/src/cc_api/clients/: anthropic.py  db.py  embed.py  qdrant.py  redis.py  stripe.py  voyage.py
apps/api/src/cc_api/core/: logging.py  ratelimit.py  security.py  settings.py
apps/api/src/cc_api/models/: __init__.py  abonnement.py  adhesion_intent.py  article.py  auth_token.py  author.py  base.py  chunk.py  issue.py  membership.py  user.py  work.py
apps/api/src/cc_api/routers/: abonnements.py  adhesions.py  corpus.py  debug.py  qa.py
apps/api/src/cc_api/schemas/: __init__.py  adhesion.py  corpus.py  qa.py
apps/api/src/cc_api/services/: __init__.py  abonnement.py  adhesion.py  citation.py  ingest.py  rag.py
apps/api/tests/: conftest.py  test_health.py
apps/api/tests/eval/: conftest.py  golden_questions.json  test_rag_deepeval.py  test_rag_ragas.py
apps/api/tests/integration/: test_abonnement_routes.py  test_adhesion_routes.py  test_alembic_matches_models.py  test_auth_tokens.py  test_citation_verification.py  test_corpus_routes.py  test_debug_routes.py  test_ingest_idempotency.py  test_ingest_pipeline.py  test_judge_eval.py  test_pipeline_rag.py  test_users_memberships.py
apps/api/tests/unit/: test_models_imports.py  test_voyage_client.py
apps/embed-server/: pyproject.toml
apps/embed-server/src/cc_embed/: __init__.py  __main__.py  app.py  config.py  engine.py
apps/web/: CLAUDE.md  astro.config.mjs  package.json  playwright.config.ts  tailwind.config.mjs  tsconfig.json  vitest.config.ts
apps/web/public/: funding.json
apps/web/public/.well-known/: funding-manifest-urls  security.txt
apps/web/src/components/: AIButton.astro  Disclosure.astro  ManifestoQuote.astro  ProjectExplain.astro  SiteFooter.astro  ThemeToggle.astro
apps/web/src/layouts/: BaseLayout.astro
apps/web/src/pages/: adherer.astro  chat.astro  corpus.astro  index.astro
apps/web/src/pages/adherer/: [tier].astro  erreur.astro  merci.astro
apps/web/src/pages/corpus/[issue]/: [article].astro
apps/web/src/pages/legal/: privacy.astro
apps/web/src/styles/: global.css
apps/web/tests/e2e/fixtures/: seeded-corpus.ts
apps/web/tests/e2e/specs/: 00-smoke.spec.ts  01-corpus.spec.ts
corpus/_seed/: bilan-001.tei.xml
corpus/bilan/: bilan-001-anniversaire-revolution-russe.tei.xml  bilan-001-bureau-international-information.tei.xml  bilan-001-internationale-deux-trois-quarts.tei.xml  bilan-001-introduction.tei.xml  bilan-001-note-liminaire.tei.xml  bilan-001.tei.xml  bilan-002.tei.xml  bilan-003.tei.xml  bilan-004.tei.xml  bilan-005.tei.xml  bilan-006.tei.xml  bilan-007.tei.xml  bilan-008.tei.xml  bilan-009.tei.xml  bilan-010.tei.xml  bilan-011.tei.xml  bilan-012.tei.xml  bilan-013.tei.xml  bilan-014.tei.xml  bilan-015.tei.xml  bilan-016.tei.xml  bilan-017.tei.xml  bilan-018.tei.xml  bilan-019.tei.xml  bilan-020.tei.xml  bilan-021.tei.xml  bilan-022.tei.xml  bilan-023.tei.xml  bilan-024.tei.xml  bilan-025.tei.xml  bilan-026.tei.xml  bilan-027.tei.xml  bilan-028.tei.xml  bilan-029.tei.xml  bilan-030.tei.xml  bilan-031.tei.xml  bilan-032.tei.xml  bilan-033.tei.xml  bilan-034.tei.xml  bilan-035.tei.xml  (+11 more)
docs/: audit-2026-05-17.md  plan-mise-en-production.md
docs/adr/: 0000-template.md  0001-stack.md  0002-tei-format.md  0003-rag-architecture.md  0004-data-model.md  0005-ark-identifiers.md  0006-deployment-coolify-ovh.md  0006-deployment-coolify.md  0007-analytics-matomo.md  0008-architecture-embedding-vps-cpu.md
docs/agent-missions/: ingest-pipeline.md
docs/deploy/: self-host.md
infra/: Dockerfile.api  Dockerfile.embed  Dockerfile.web  docker-compose.prod.yml  docker-compose.yml
infra/caddy/: Caddyfile
infra/matomo/: docker-compose.yml
ops/: drills.md
ops/runbooks/: coolify-backup-restore.md  coolify-deploy.md  coolify-incident.md  lock-down-repo.md  matomo-deploy.md
ops/scripts/: lock-down-repo.sh
scripts/: check-dco.sh  eval_rag.py  ingest_corpus.py  scrape_bilan.py
