[project]
name = "cc-api"
version = "0.0.1"
description = "FastAPI backend for class-consciousness."
requires-python = ">=3.12"
license = { text = "AGPL-3.0-or-later" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.5",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "qdrant-client>=1.12",
    "redis>=5.0",
    "anthropic>=0.39",
    "httpx>=0.27",
    "structlog>=24.4",
    "itsdangerous>=2.2",
    "slowapi>=0.1.9",
    "fastapi-mail>=1.4",
    "rapidfuzz>=3.10",
    "tiktoken>=0.8",
    "stripe>=11.4",
    "cc-corpus",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "hypothesis>=6.112",
    "vcrpy>=6.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "testcontainers[postgres,qdrant]>=4.8",
    "pytest-watch>=4.2",
    "watchfiles>=0.24",
    "deepeval>=2.0",
    "ragas>=0.2",
    "langchain-anthropic>=0.3",
]

[tool.uv.sources]
# cc-api importe cc_corpus (services/ingest.py, services/rag.py) : dépendance
# de workspace — sinon `uv sync --package cc-api` ne l'installe pas dans l'image.
cc-corpus = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cc_api"]
