[project]
name = "cc-embed"
version = "0.0.1"
description = "Service de serving : embeddings Qwen3-Embedding-0.6B + reranking Qwen3-Reranker-0.6B (CPU)."
requires-python = ">=3.12"
license = { text = "AGPL-3.0-or-later" }
dependencies = [
    "torch>=2.6",
    "transformers>=4.51",
    "accelerate>=1.2",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.5",
    "structlog>=24.4",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cc_embed"]
